# python_project_template

./: .gitmodules  README.md  pyproject.toml  setup.sh
scripts/: _auto_git_clone.sh
